--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "name": "imuncle",
-    "repo": "gitblog",
-    "client_id": "4148cca0f91e524d1a42",
-    "client_secret": "637c2c993cccf79c51a0a215f538932edfdcb9b0",
+    "name": "jimmy901302",
+    "repo": "blog.baojun.dpdns.org",
+    "client_id": "Ov23livm2NwNHyo91xFf",
+    "client_secret": "f3807a68bbdd4e4a539f8e276e3962220e5e125a",
     "title": "Gitblog",
     "instruction": "基于GitHub issue的个人博客模板",
     "server_link": "http://119.23.8.25/gh-oauth-server.php",
@@ -14,12 +14,12 @@
         "首页":"./"
     },
     "friends": {
-        "imuncle" : "https://imuncle.github.io"
+        "imuncle" : "https://jimmy901302.github.io"
     },
     "icons": {
         "Github" : {
             "icon_src" : "images/github.svg",
-            "href" : "https://github.com/imuncle/gitblog",
+            "href" : "https://github.com/jimmy301302/gitblog",
             "hidden_img" : null,
             "width" : 0
         }
