--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
     "repo": "blog.baojun.dpdns.org",
     "client_id": "Ov23livm2NwNHyo91xFf",
     "client_secret": "f3807a68bbdd4e4a539f8e276e3962220e5e125a",
-    "title": "Gitblog",
-    "instruction": "基于GitHub issue的个人博客模板",
+    "title": "baojun",
+    "instruction": "baojun的个人博客模板",
     "server_link": "http://119.23.8.25/gh-oauth-server.php",
     "filter": {
         "creator": "all",
@@ -12,16 +12,21 @@
     },
     "menu": {
         "首页":"./"
+        "vpn":"./"
     },
-    "friends": {
-        "imuncle" : "https://jimmy901302.github.io"
-    },
+    
     "icons": {
         "Github" : {
             "icon_src" : "images/github.svg",
-            "href" : "https://github.com/jimmy301302/gitblog",
+            "href" : "https://github.com/",
             "hidden_img" : null,
             "width" : 0
+        }
+        "Wechat":{
+            "icon_src" : "images/wechat.svg",
+            "hidden_img" : null,
+            "width" : 0
+            
         }
     }
 }
