--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
             "width" : 0
         }
         "Wechat":{
-            "icon_src" : "images/wechat.svg",
+            "icon_src" : "images/wechat.jpg",
             "hidden_img" : null,
             "width" : 0
             
