--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "name": "baojun",
-    "repo": "BAOJUN BLOG",
+    "name": "jimmy901302",
+    "repo": "jimmy901302.github.io",
     "client_id": "Ov23livm2NwNHyo91xFf",
     "client_secret": "f3807a68bbdd4e4a539f8e276e3962220e5e125a",
     "title": "baojun",
