--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "client_id": "Ov23liqPCoEtqKvPGYKR",
     "client_secret": "7caed8417137da8d3eb6c1852ea64f7d9e5faa30",
     "title": "BAOJUN BLOG",
-    "instruction": "BAOJUN的个人博客",
+    "instruction": "盏盏鬼火,大胆夜路",
     "server_link": "http://119.23.8.25/gh-oauth-server.php",
     "filter": {
         "creator": "all",
