--- a/config.json
+++ b/config.json
@@ -1,17 +1,18 @@
 {
-    "name": "imuncle",
+    "name": "jimmy901302",
     "repo": "gitblog",
-    "client_id": "4148cca0f91e524d1a42",
-    "client_secret": "637c2c993cccf79c51a0a215f538932edfdcb9b0",
-    "title": "Gitblog",
-    "instruction": "基于GitHub issue的个人博客模板",
+    "client_id": "Ov23liqPCoEtqKvPGYKR",
+    "client_secret": "7caed8417137da8d3eb6c1852ea64f7d9e5faa30",
+    "title": "BAOJUN BLOG",
+    "instruction": "盏盏鬼火,大胆夜路",
     "server_link": "http://119.23.8.25/gh-oauth-server.php",
     "filter": {
         "creator": "all",
         "state": "open"
     },
     "menu": {
-        "首页":"./"
+        "首页":"https://blog.baojun.dpdns.org/",
+        "VPN":"https://blog.baojun.dpdns.org/VPN/"
     },
     "friends": {
         "imuncle" : "https://imuncle.github.io"
@@ -19,9 +20,16 @@
     "icons": {
         "Github" : {
             "icon_src" : "images/github.svg",
-            "href" : "https://github.com/imuncle/gitblog",
+            "href" : "https://github.com/jimmy901302",
             "hidden_img" : null,
             "width" : 0
+        },
+        "Wechat":{
+            "icon_src" : "images/wechrt.svg",
+            "hidden_img" : null,
+            "width" : 0
+
+
         }
     }
 }
