--- a/config.json
+++ b/config.json
@@ -26,7 +26,7 @@
         },
         "Wechat":{
 
-            "icon_src" : "images/wechrt.svg",
+            "icon_src" : "images/wechat.jpg",
             "hidden_img" : null,
             "width" : 0
 
